# gcamera_tools

./: .gitignore  Cargo.toml  README.md  binary_compare.py  motion.xml  motionless.xml  test_image.py
.github/workflows/: build_and_test.yml  clippy.yml
src/: arguments.rs  camera_image.rs  cli.rs  debug_components.rs  errors.rs  jpeg.rs  jpeg_components.rs  jpeg_image.rs  lib.rs  main.rs  xmp.rs
src/cli/: arguments.rs  tool.rs
src/jpeg/: jpeg_components.rs  jpeg_image.rs  marker.rs  xmp.rs
